added and filled out table

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YouTube Video Homepage</title>
 </head>
+
 <body>
+    <table border='1' cellspacing='0' cellpadding='5'>
+        <tr>
+            <td>Video Name</td>
+            <td>Description</td>
+            <td>Length</td>
+        </tr>
+        <tr>
+            <td> <a href='https://www.youtube.com/watch?v=owZldVBXZLQ'>Greatest GAME 7 Moments of the NBA!</a> </td>
+            <td>A compilation of the greatest moments from game 7s in NBA playoff history.</td>
+            <td>10:46</td>
+        </tr>
+        <tr>
+            <td> <a href='https://www.youtube.com/watch?v=t22flliJLTQ'>NBA's Top 100 Plays of The Decade</a> </td>
+            <td>A compilation of the 100 greatest NBA plays of the last decade.</td>
+            <td>30:50</td>
+        </tr>
+        <tr>
+            <td> <a href='https://www.youtube.com/watch?v=1IJobV3RWZ4'>The Best 50 Plays of The Season</a> </td>
+            <td>The 50 best NBA plays from this season.</td>
+            <td>20:07</td>
+        </tr>
+    </table>
     
 </body>
 </html>
