updated th tags

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <table border='1' cellspacing='0' cellpadding='5'>
         <tr>
-            <td>Video Name</td>
-            <td>Description</td>
-            <td>Length</td>
+            <th>Video Name</td>
+            <th>Description</td>
+            <th>Length</td>
         </tr>
         <tr>
             <td> <a href='https://www.youtube.com/watch?v=owZldVBXZLQ'>Greatest GAME 7 Moments of the NBA!</a> </td>
