--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Video Homepage</title>
+    <h1>My Favorite Videos</h1>
 </head>
 
 <body>
+    <h2>NBA Videos</h2>
+
     <table border='1' cellspacing='0' cellpadding='5'>
         <tr>
             <th>Video Name</td>
