completed additonal content fields

--- a/index.html
+++ b/index.html
@@ -13,24 +13,37 @@
 
     <table border='1' cellspacing='0' cellpadding='5'>
         <tr>
-            <th>Video Name</td>
-            <th>Description</td>
-            <th>Length</td>
+            <th>Video Name</th>
+            <th>Description</th>
+            <th>Length</th>
+            <th>Youtube Channel</th>
+            <th>Twitter</th>
+            <th>Social Media</th>
+
         </tr>
         <tr>
             <td> <a href='https://www.youtube.com/watch?v=owZldVBXZLQ'>Greatest GAME 7 Moments of the NBA!</a> </td>
             <td>A compilation of the greatest moments from game 7s in NBA playoff history.</td>
             <td>10:46</td>
+            <td> <a href="https://www.youtube.com/channel/UCqQo7ewe87aYAe7ub5UqXMw">House of Highlights</a> </td>
+            <td> <a href="https://twitter.com/HoHighlights">Twitter</a> </td>
+            <td> <a href="https://www.instagram.com/houseofhighlights/">Instagram</a> </td>
         </tr>
         <tr>
             <td> <a href='https://www.youtube.com/watch?v=t22flliJLTQ'>NBA's Top 100 Plays of The Decade</a> </td>
             <td>A compilation of the 100 greatest NBA plays of the last decade.</td>
             <td>30:50</td>
+            <td> <a href="https://www.youtube.com/channel/UCWJ2lWNubArHWmf3FIHbfcQ">NBA</a> </td>
+            <td> <a href="https://twitter.com/nba">Twitter</a> </td>
+            <td> <a href="https://www.instagram.com/nba/">Instagram</a> </td>
         </tr>
         <tr>
             <td> <a href='https://www.youtube.com/watch?v=1IJobV3RWZ4'>The Best 50 Plays of The Season</a> </td>
             <td>The 50 best NBA plays from this season.</td>
             <td>20:07</td>
+            <td> <a href="https://www.youtube.com/channel/UCWJ2lWNubArHWmf3FIHbfcQ">NBA</a> </td>
+            <td> <a href="https://twitter.com/nba">Twitter</a> </td>
+            <td> <a href="https://www.instagram.com/nba/">Instagram</a> </td>
         </tr>
     </table>
 
