--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Video Homepage</title>
-   
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     
     <h2>NBA Videos</h2>
 
-    <table border='1' cellspacing='0' cellpadding='5'>
+    <table id='table'>
         <tr>
             <th>Video Name</th>
             <th>Description</th>
